--- a/src/containers/Home/components/styles/tab.less
+++ b/src/containers/Home/components/styles/tab.less
@@ -2,6 +2,7 @@
   position: relative;
   background: rgb(249, 249, 249);
   padding: 0.742rem 0;
+  border-bottom: 0.0833rem solid rgb(204, 204, 204);
   .tab-list {
     width: 50%;
     display: inline-block;
@@ -16,7 +17,7 @@
       font-style: normal;
     }
     &:first-child {
-      border-right: 0.0833rem solid rgb(187, 187, 187);
+      border-right: 0.041667rem solid rgb(187, 187, 187);
     }
   }
 }
