--- a/src/containers/Home/components/styles/add.less
+++ b/src/containers/Home/components/styles/add.less
@@ -1,18 +1,20 @@
 .add-fictions {
   background: rgba(230, 230, 230, 1);
-  padding: 0.92rem 1.25rem;
+  padding: 1.667rem 1.25rem;
   cursor: pointer;
   span {
     vertical-align: middle;
   }
   .fa-stack {
-    transform: scale(0.8);
+    //transform: scale(0.8);
   }
   i {
     color: rgb(174, 74, 32);
   }
   .text {
-    margin-left: 1.1667rem;
+    margin-left: 1rem;
     color: rgb(33, 33, 33);
+    font-size: 1.1667rem;
+    font-weight: 500;
   }
 }
