--- a/src/containers/Home/components/styles/community.less
+++ b/src/containers/Home/components/styles/community.less
@@ -4,7 +4,7 @@
   border-bottom: 0.041667rem solid rgb(197, 197, 197);
   .list {
     border-bottom: 0.041667rem solid rgb(197, 197, 197);
-    padding: 0.75rem 0;
+    padding: 1.333rem 0;
     cursor: pointer;
     position: relative;
     &:last-child {
@@ -21,12 +21,12 @@
       width: 1.5rem;
       height: 1.5rem;
       vertical-align: middle;
-      margin-right: 0.833rem;
+      margin-right: 1rem;
     }
     span {
       display: inline-block;
       vertical-align: middle;
-      transform: scale(0.9);
+      font-size: 1.1667rem;
     }
     i {
       position: absolute;
@@ -44,6 +44,5 @@
   span {
     color: rgb(188, 188, 188);
     display: inline-block;
-    transform: scale(0.9);
   }
 }
