--- a/src/containers/Home/components/styles/tab.less
+++ b/src/containers/Home/components/styles/tab.less
@@ -1,23 +1,28 @@
 .tab {
   position: relative;
   background: rgb(249, 249, 249);
-  padding: 0.742rem 0;
   border-bottom: 0.0833rem solid rgb(204, 204, 204);
-  .tab-list {
+  .tab-body {
     width: 50%;
+    padding: 1.41667rem 0;
     display: inline-block;
     box-sizing: border-box;
-    text-align: center;
     cursor: pointer;
-    color: rgb(74, 74, 74);
-    i {
-      display: block;
-      font-size: 1rem;
-      transform: scale(0.85);
-      font-style: normal;
-    }
     &:first-child {
-      border-right: 0.041667rem solid rgb(187, 187, 187);
+      .tab-list {
+        border-right: 0.041667rem solid rgb(187, 187, 187);
+      }
+    }
+    .tab-list {
+      display: block;
+      text-align: center;
+      color: rgb(74, 74, 74);
+      i {
+        display: block;
+        font-size: 1rem;
+        //transform: scale(0.9);
+        font-style: normal;
+      }
     }
   }
 }
