--- a/src/containers/Home/styles/home.less
+++ b/src/containers/Home/styles/home.less
@@ -1,3 +1,6 @@
 #Bookcase {
-  background: rgba(224, 224, 224, 0.9);
+  background: rgba(224, 224, 224, 1);
+}
+.home {
+  transition: all .15s ease-in-out;
 }
