--- a/src/containers/SideBar/styles/sideLeft.less
+++ b/src/containers/SideBar/styles/sideLeft.less
@@ -1,3 +1,23 @@
 .side-left {
-
+  background: rgb(31, 30, 29);
+  width: 25%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  .list {
+    text-align: center;
+    padding: 1.25rem 0;
+    border-top: 0.1667rem solid rgb(23, 22, 21);
+    cursor: pointer;
+    &:first-child {
+      margin-top: 3.33rem;
+    }
+    &:last-child {
+      border-bottom: 0.1667rem solid rgb(23, 22, 21);
+    }
+    i {
+      color: #fff;
+      font-size: 2rem;
+    }
+  }
 }
