--- a/src/containers/Home/components/styles/header.less
+++ b/src/containers/Home/components/styles/header.less
@@ -10,8 +10,8 @@
     font-size: 1.333rem;
     position: absolute;
     cursor: pointer;
-    top: 1rem;
-    left: 1.25rem;
+    left: 0;
+    padding: 1rem 1.25rem;
   }
   span {
     font-size: 1.333rem;
