--- a/src/app.less
+++ b/src/app.less
@@ -2,6 +2,13 @@
 * {
     margin: 0;
     padding: 0;
+    webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility:hidden;
+    -webkit-perspective:1000;
 }
 a {
     text-decoration: none;
