--- a/src/containers/Home/components/styles/header.less
+++ b/src/containers/Home/components/styles/header.less
@@ -19,7 +19,7 @@
   .right {
     position: absolute;
     font-size: 1.333rem;
-    top: 1rem;
-    right: 1.25rem;
+    right: 0;
+    padding: 1rem 1.25rem;
   }
 }
