--- a/src/app.less
+++ b/src/app.less
@@ -101,7 +101,12 @@ a {
     transform: translateX(100%);
     transition: all 0.4s ease-out;
 }
-
+.container {
+    background: rgb(224, 224, 224);
+    position: relative;
+    z-index: 1;
+    transition: all 0.15s ease-in-out;
+}
 /*适配设置*/
 @media screen and (min-width: 414px) {
     html, body { font-size: 31px; }
