--- a/src/containers/SideBar/styles/sideLeft.less
+++ b/src/containers/SideBar/styles/sideLeft.less
@@ -5,6 +5,7 @@
   position: absolute;
   left: 0;
   .list {
+    display: block;
     text-align: center;
     padding: 1.25rem 0;
     border-top: 0.1667rem solid rgb(23, 22, 21);
@@ -19,5 +20,8 @@
       color: #fff;
       font-size: 2rem;
     }
+  }
+  .active {
+    border-left: 0.375rem solid rgb(226, 0 , 27);
   }
 }
