--- a/src/app.less
+++ b/src/app.less
@@ -107,6 +107,7 @@ a {
     z-index: 1;
     transition: all 0.15s ease-in-out;
 }
+.clearfix{overflow:hidden;_zoom:1;}
 /*适配设置*/
 @media screen and (min-width: 414px) {
     html, body { font-size: 31px; }
