--- a/src/containers/SideBar/styles/sideRight.less
+++ b/src/containers/SideBar/styles/sideRight.less
@@ -6,9 +6,11 @@
   right: 0;
   top: 0;
   .list {
+    display: block;
     background: rgb(30, 30, 30);
     border: 0.0833rem solid rgb(23, 23, 23);
     padding: 1rem 0 1rem 1.25rem;
+    cursor: pointer;
     .square {
       display: inline-block;
       width: 2.5rem;
